--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ Job Fair Tips:</br>
           Vancouver & Victoria
           <a target="_blank" href="mailto:kelly.gordon@lighthouselabs.com ">kelly.gordon@lighthouselabs.com </a> <br>
           Calgary
-          <a target="_blank" href="mailto:tara.ursulescu@lighthouselabs.com ">tara.ursulescu@lighthouselabs.com </a> <br>
+          <a target="_blank" href="mailto:sakina.tinwala@lighthouselabs.com ">sakina.tinwala@lighthouselabs.com </a> <br>
           Toronto & Halifax
           <a target="_blank" href="mailto:louisa@lighthouselabs.ca">louisa@lighthouselabs.ca</a><br>
           Montreal
